cmake_minimum_required(VERSION 2.8)
project(PhenoDataProc)
find_package(OpenCV REQUIRED)
find_package(CUDA REQUIRED)
find_package(PCL 1.8 REQUIRED)
include_directories(/usr/local/include/exiv2)
include(FindCUDA)
include_directories(/usr/local/cuda/include)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -std=c++11")
set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -Xcompiler -fopenmp")
set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -Xcompiler -O3")
cuda_add_executable(phenoproc main.cpp PreprocessingTools.h PreprocessingTools.cpp StereoMatching.h StereoMatching.cpp Names.h HeightDetection.h HeightDetection.cpp Map2FileMapping.h Map2FileMapping.cpp StalkDetection.h StalkDetection.cpp Stereo3DMST.h Stereo3DMST.cu lodepng.h lodepng.cpp PhenoFeatureExtraction.h PhenoFeatureExtraction.cpp segment-graph.h disjoint-set.h)
#cuda_add_executable(stereo3d main.cpp PreprocessingTools.h PreprocessingTools.cpp StereoMatching.h StereoMatching.cpp PatchMatchStereoGPU.h PatchMatchStereoGPU.cu lodepng.h lodepng.cpp)
#cuda_add_executable(test test.cpp cudatest.h cudatest.cu PatchMatchStereoGPU.h PatchMatchStereoGPU.cu lodepng.h lodepng.cpp)
#target_link_libraries(test ${OpenCV_LIBS} ${PCL_LIBRARIES} /usr/local/cuda/lib64/libcudart.so)
target_link_libraries(phenoproc ${OpenCV_LIBS} ${PCL_LIBRARIES} /usr/local/cuda/lib64/libcudart.so /usr/local/cuda/lib64/libcurand.so /usr/local/lib/libexiv2.so)
